# xslim

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  preprocess.py  pylint.conf  pyproject.toml  requirements.txt  setup.py
.github/skills/xslim-accuracy-tuning/: README.md  SKILL.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md
.github/skills/xslim-accuracy-tuning/references/: graphwise-analysis.md  precision-and-finetune.md  preprocessing-and-calibration.md  scripted-automation.md  strategy-selection.md  targeted-tuning.md
.github/skills/xslim-accuracy-tuning/scripts/: bootstrap_xslim_project.py
.github/workflows/: code-style.yml  publish.yml  python-package.yml  test.yml
doc/: README.md  README_zh.md  accuracy_tuning.md  accuracy_tuning_zh.md  configuration.md  configuration_zh.md  examples.md  examples_zh.md
hooks/: ln-hook.sh  pre-commit
samples/: README.md  README_zh.md  bertsquad.json  convert_fp32_to_fp16.py  demo.py  demo.sh  download_data.sh  inception_v1.json  mobilenet_v3_small.json  mobilenet_v3_small_dyn_quantize.json  mobilenet_v3_small_fp16.json  preprocess.py  resnet18.json  resnet18_custom_preprocess.json
samples/bert_quant_dataset/: input_ids_0.npy  input_ids_1.npy  input_ids_2.npy  input_mask_0.npy  input_mask_1.npy  input_mask_2.npy  segment_ids_0.npy  segment_ids_1.npy  segment_ids_2.npy
src/xslim/: __init__.py  __main__.py  onnx_graph_helper.py  xslim_pipeline.py  xslim_setting.py
src/xslim/analyse/: __init__.py  graphwise.py
src/xslim/onnxslim_pass/: __init__.py  batchnorm.py  dynamic_q_matmul.py  layernorm.py  qkv_split.py  slice_fusion.py  split_to_slice.py  swish.py  window_partition.py  window_reverse.py  yolo_decode.py
src/xslim/optimizer/: equalization.py  fusion.py  training.py
src/xslim/quantizer/: __init__.py  convert_to_fp16.py
tests/: QuantZoo  QuantZoo_Imagenet.py  QuantZoo_OCR.py  QuantZoo_Pose.py  QuantZoo_Segmentation.py  QuantZoo_SuperRes.py  QuantZoo_Yolo.py  coco_eval_helper.py  demo_setting.json  img_list.txt  preprocess.py  test_convert_to_fp16.py  test_dynamic_quantizer.py  test_global_functions_mapping.py  test_onnx_operator_support.py  test_onnxslim_pass.py  test_packaging_standards.py  test_quantize_pipeline.py  test_torch_ops.py  test_version_metadata.py
xquant/: __init__.py  __main__.py  calibration_helper.py  defs.py  logger.py  onnx_graph_helper.py  xquant_pipeline.py  xquant_setting.py
xquant/analyse/: graphwise.py
xquant/executor/: __init__.py  extension.py
xquant/onnxslim_pass/: gelu.py  layernorm.py
xquant/optimizer/: __init__.py  calibration.py  equalization.py  fusion.py  legalized.py  observer.py  refine.py  training.py
xquant/ppq_decorator/: __init__.py  decorator.py  onnx_parser.py  onnxruntime_exporter.py
xquant/ppq_decorator/ppq/IR/: deploy.py  morph.py  training.py
xquant/ppq_decorator/ppq/executor/: base.py  torch.py
xquant/ppq_decorator/ppq/parser/: onnx_parser.py  onnxruntime_exporter.py
xquant/ppq_decorator/ppq/scheduler/: perseus.py
xquant/ppq_decorator/ppq/utils/: attribute.py  round.py
xquant/quantizer/: __init__.py  convert_to_fp16.py  dynamic_quantizer.py  xquantizer.py
xslim/: __main__.py  calibration_helper.py  defs.py  logger.py  onnx_graph_helper.py  xslim_pipeline.py  xslim_setting.py
xslim/onnxslim_pass/: __init__.py  batchnorm.py  dynamic_q_matmul.py  gelu.py  layernorm.py  padpool.py  qkv_split.py  reciprocal_div.py  rmsnorm.py  yolo_decode.py
xslim/optimizer/: __init__.py  calibration.py  fusion.py  legalized.py  observer.py  refine.py
xslim/ppq_decorator/: __init__.py
xslim/ppq_decorator/ppq/: __init__.py
xslim/ppq_decorator/ppq/IR/: __init__.py  morph.py  search.py
xslim/ppq_decorator/ppq/core/: common.py  (+1 more)
xslim/quantizer/: convert_to_fp16.py  dynamic_quantizer.py  xslim.py
(+65 files in other folders)
