[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xslim"
description = "XSlim is an offline quantization toolkit based on PPQ for ONNX models."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "SpacemiT", email = "xslim@spacemit.com" },
]
keywords = ["onnx", "quantization", "ptq", "fp16", "dynamic-quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/spacemit-com/xslim"
Repository = "https://github.com/spacemit-com/xslim"
Documentation = "https://github.com/spacemit-com/xslim/tree/main/doc"
Issues = "https://github.com/spacemit-com/xslim/issues"

[project.scripts]
xslim = "xslim.__main__:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["xslim", "xslim.*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION_NUMBER"] }
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E402",
    "E501",
    "E701",
    "E711",
    "E712",
    "E713",
    "E721",
    "E722",
    "E731",
    "F401",
    "F403",
    "F405",
    "F541",
    "F811",
    "F821",
    "F841",
    "F901",
]
